--- a/teamlabxinflearn/numpy_practice.ipynb
+++ b/teamlabxinflearn/numpy_practice.ipynb
@@ -54,6 +54,520 @@
    "source": [
     "weight_vector.T.dot(x_vector)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e647f6e",
+   "metadata": {},
+   "source": [
+    "## array shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9543874",
+   "metadata": {},
+   "source": [
+    "![array shqpe](./img/array_shqpe.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4b353b",
+   "metadata": {},
+   "source": [
+    "### ndim & shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e9d930ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e8327e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxrix = [[1,2,3,4],[1,2,3,4],[1,2,3,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2ba0e0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 차원 구하기\n",
+    "np.array( maxrix, int).ndim "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c9ebe8c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 개수 구하기\n",
+    "np.array( maxrix, int).size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25432ce0",
+   "metadata": {},
+   "source": [
+    "### array dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "241f6476",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 메모리 크기 반환\n",
+    "np.array( maxrix, dtype = np.float32).nbytes\n",
+    "# 32bits = 4bytes -> 4 * 12 = 48bytes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96fa39da",
+   "metadata": {},
+   "source": [
+    "## shape handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4277d634",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4, 1, 2],\n",
+       "       [3, 4, 1, 2, 3, 4]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array( maxrix, int).reshape(2,6)\n",
+    "# 2행 6열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1413ed57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 1, 2],\n",
+       "       [3, 4, 1],\n",
+       "       [2, 3, 4]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array( maxrix, int).reshape(-1,3)\n",
+    "# 열은 6으로 고정하고 행은 자동 개수 지정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "41bb9512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2, 3],\n",
+       "        [4, 1, 2]],\n",
+       "\n",
+       "       [[3, 4, 1],\n",
+       "        [2, 3, 4]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array( maxrix, int).reshape(2,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7f5b8ca0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1차원으로 만들어준다\n",
+    "np.array( maxrix, int).flatten()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57280986",
+   "metadata": {},
+   "source": [
+    "## array indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "490c0c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(maxrix)[0,1] # np.array(maxrix)[0][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9af50f8",
+   "metadata": {},
+   "source": [
+    "## array slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3ebfa6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4],\n",
+       "       [1, 2, 3, 4]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 리스트와 달리 행과 열을 나눠서 가능\n",
+    "a = np.array(maxrix)\n",
+    "a[:, 2:] # 전체 row의 3번째 column\n",
+    "a[2:,:]  # 3번째 row의 전체 column\n",
+    "a[1:] # 2번쨰 row부터"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e433075",
+   "metadata": {},
+   "source": [
+    "## arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "60702be4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  2,  4],\n",
+       "       [ 6,  8, 10]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(0,12,2).reshape(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3964ff2f",
+   "metadata": {},
+   "source": [
+    "## 단위행렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "beb3a4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(3,5, k=2) # column 이 k번째부터 생김"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7547af2",
+   "metadata": {},
+   "source": [
+    "## 행렬의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "7c337598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array = np.arange(1,13).reshape(3,4)\n",
+    "test_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "aabeb05a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 26, 42])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.sum(axis = 1) # 행 기준으로 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "67c5e63e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 18, 21, 24])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_array.sum(axis = 0) # 열 기준으로 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "ab07cde8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AxisError",
+     "evalue": "axis 2 is out of bounds for array of dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/hl/4d54949d4_1d6ykczgy81mc00000gn/T/ipykernel_50529/1232440379.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_array\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 열 기준으로 합\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/Caskroom/miniconda/base/envs/da/lib/python3.8/site-packages/numpy/core/_methods.py\u001b[0m in \u001b[0;36m_sum\u001b[0;34m(a, axis, dtype, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m     46\u001b[0m def _sum(a, axis=None, dtype=None, out=None, keepdims=False,\n\u001b[1;32m     47\u001b[0m          initial=_NoValue, where=True):\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mumr_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhere\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m def _prod(a, axis=None, dtype=None, out=None, keepdims=False,\n",
+      "\u001b[0;31mAxisError\u001b[0m: axis 2 is out of bounds for array of dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "test_array.sum(axis = 2) # 3차원일 떄 가능"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e50caa58",
+   "metadata": {},
+   "source": [
+    "![axis_sum](img/axis_sum.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d2a66ca",
+   "metadata": {},
+   "source": [
+    "## 행렬 합치기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f0726295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "np.vstack((a,b)) # 위 아래 붙이기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "fc184308",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a,b)) # 가로 붙이기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca0f80e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.concatenate"
+   ]
   }
  ],
  "metadata": {
