--- a/teamlabxinflearn/numpy_practice.ipynb
+++ b/teamlabxinflearn/numpy_practice.ipynb
@@ -25,6 +25,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c4201b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "e39cab9f",
    "metadata": {},
@@ -568,6 +576,221 @@
    "source": [
     "# np.concatenate"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6713698d",
+   "metadata": {},
+   "source": [
+    "## array operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "692f3ce8",
+   "metadata": {},
+   "source": [
+    "행렬 간 연산 (+, -, *)는 그 자리 그대로 연산됨(행렬 연산X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e14ae720",
+   "metadata": {},
+   "source": [
+    "### Dot product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1277514c",
+   "metadata": {},
+   "source": [
+    "![dot_product](img/dot_product.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af7c67ba",
+   "metadata": {},
+   "source": [
+    "## numpy comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b67f3774",
+   "metadata": {},
+   "source": [
+    "![numpy comparison](img/numpy_comparison.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "876dc541",
+   "metadata": {},
+   "source": [
+    "![#1](img/comparison_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb24347",
+   "metadata": {},
+   "source": [
+    "### np.where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf4cad9",
+   "metadata": {},
+   "source": [
+    "![np.where](img/np_where.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67eff7f2",
+   "metadata": {},
+   "source": [
+    "## bolean & fancy index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11b65a6f",
+   "metadata": {},
+   "source": [
+    "### bolean index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7190b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "test_array = np.arange(10)\n",
+    "test_array[test_array > 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1bd54ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hl/4d54949d4_1d6ykczgy81mc00000gn/T/ipykernel_61456/1187781966.py:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  b.astype(np.int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = test_array < 5\n",
+    "b.astype(np.int) # bolean 타입의 값을 T는 1, F는 0으로 반환"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c86b9fe",
+   "metadata": {},
+   "source": [
+    "### fancy index  \n",
+    "array를 index value로 사용해서 값 추출하는 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3a562e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2, 4, 8, 6])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([2,4,6,8])\n",
+    "b = np.array([0,0,1,3,2], int) # 반드시 integer \n",
+    "a.take(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d1d926",
+   "metadata": {},
+   "source": [
+    "## numpy data i/o"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4665b3b",
+   "metadata": {},
+   "source": [
+    "### loadtxt & savetxt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c240c392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.loadtxt('file_path')\n",
+    "# np.savetxt('file_name', file, delimiter = \",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "892adbb6",
+   "metadata": {},
+   "source": [
+    "![npy](img/npy.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f515df00",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
