--- a/teamlabxinflearn/numpy_practice.ipynb
+++ b/teamlabxinflearn/numpy_practice.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "weight_vector.T.dot(x_vector)"
+    "weight_vector.T.dot(x_vector) # transpose 한 벡터와 x_vector 곱하기"
    ]
   },
   {
@@ -785,12 +785,6 @@
    "source": [
     "![npy](img/npy.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f515df00",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
