update knn code

--- a/data_science-spring/실습/knn.ipynb
+++ b/data_science-spring/실습/knn.ipynb
@@ -1007,6 +1007,14 @@
     "guesses = classifier.predict(new_x.reshape(1, -1))\n",
     "guesses"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ref\n",
+    "[knn참고](https://hleecaster.com/ml-knn-classifier-example/)"
+   ]
   }
  ],
  "metadata": {
