--- a/teamlabxinflearn/week_3/numpy_1.ipynb
+++ b/teamlabxinflearn/week_3/numpy_1.ipynb
@@ -314,6 +314,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> vector의 경우 axis =1 로 할 경우 2차원 matrix로 만들어줘야함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### new axis"
    ]
   },
