update category encoding

--- a/teamlabxinflearn/week_4/feature_engineering/preprocessing_2.ipynb
+++ b/teamlabxinflearn/week_4/feature_engineering/preprocessing_2.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 카테고리데이터의 처리"
+    "## 카테고리데이터의 처리\n",
+    "[category encoding 설명](https://dailyheumsi.tistory.com/120)"
    ]
   },
   {
