--- a/teamlabxinflearn/week_8/logistic_regression/logistic_regression_sklearn.ipynb
+++ b/teamlabxinflearn/week_8/logistic_regression/logistic_regression_sklearn.ipynb
@@ -438,6 +438,236 @@
     "# 0일 확률과 1일 확률 ( 높은 것이 선택됨 )\n",
     "logreg.predict_proba(x_test[:5])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1, 1, 2)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "y_predict = [0,0,1,1,0,1]\n",
+    "y_true = [1,0,1,0,0,1]\n",
+    "\n",
+    "tn, fp, fn, tp = confusion_matrix(y_true, y_predict).ravel()\n",
+    "tn, fp, fn, tp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## performance metrics for clssfication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정확도 (Accuracy)\n",
+    "  - $\\frac{(TP + TN)}{(TP + FP + FN + TN)}$  \n",
+    "  -   \n",
+    "  - $\\frac{맞게 예측한 데이터 수}{전체 데이터 수}$ \n",
+    "- 정밀도 (Precision)\n",
+    "  - postitive라고 예측한 것 중에 실제로 얼마나 맞췄는가\n",
+    "  - `TP/(TP+FP)`\n",
+    "- 재현률, 민감률 (Recall) \n",
+    "  - 실제 참인 데이터를 얼마나 걸러냈는가\n",
+    "  - `TP/(TP+FN)`  \n",
+    "<p style = 'color: green'>precision과 recall은 trade-off 관계</p>\n",
+    "\n",
+    "- 특이성 (Specify) \n",
+    "  - 전체 부정 중 부정을 정확히 찾아낸 비율\n",
+    "  - `TN/(TN+FP) = TN/total_N`  \n",
+    "- ROC\n",
+    "  - `TP/(TP+FN)`\n",
+    "- F1 score\n",
+    "  - precision 과 recall을 통합한 측정지표 (둘의 조화평균)\n",
+    "  - $F_1 = 2\\frac{precision*recall}{precision+recall}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 불균형한 dataset일 때, accuracy만으로 정확한 수치 표현 못 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6666666666666666, 0.6666666666666666)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.precision_score(y_true, y_predict), metrics.accuracy_score(y_true, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### multi class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 0, 0],\n",
+       "       [1, 0, 1],\n",
+       "       [0, 2, 0]])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_truth = [0, 1, 2, 0, 1, 2]\n",
+    "y_pre = [0, 2, 1, 0, 0, 1]\n",
+    "confusion_matrix(y_truth, y_pre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.66666667, 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 각 라벨 별 평균\n",
+    "metrics.precision_score(y_truth, y_pre, average=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 전체 데이터의 평균\n",
+    "metrics.precision_score(y_truth, y_pre, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2222222222222222"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 각각의 평균 합의 평균\n",
+    "metrics.precision_score(y_truth, y_pre, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.8, 0. , 0. ])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.f1_score(y_truth, y_pre, average=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## precision-recall curve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "classification_report 모듈도 있다 (요약)"
+   ]
   }
  ],
  "metadata": {
