--- a/teamlabxinflearn/week_14/DT/dt.ipynb
+++ b/teamlabxinflearn/week_14/DT/dt.ipynb
@@ -2055,10 +2055,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Regression of Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
