--- a/teamlabxinflearn/ensemble/xgboost.ipynb
+++ b/teamlabxinflearn/ensemble/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22:23:59] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
+      "[00:56:58] WARNING: /Users/runner/work/xgboost/xgboost/python-package/build/temp.macosx-10.9-x86_64-3.7/xgboost/src/learner.cc:627: \n",
       "Parameters: { \"silent\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -73,56 +73,64 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[0]\teval-auc:0.75688\ttrain-auc:0.86017\n",
-      "[1]\teval-auc:0.76001\ttrain-auc:0.86629\n",
-      "[2]\teval-auc:0.76858\ttrain-auc:0.87272\n",
-      "[3]\teval-auc:0.76439\ttrain-auc:0.88199\n",
-      "[4]\teval-auc:0.76832\ttrain-auc:0.88757\n",
-      "[5]\teval-auc:0.77663\ttrain-auc:0.89136\n",
-      "[6]\teval-auc:0.78274\ttrain-auc:0.89261\n",
-      "[7]\teval-auc:0.79178\ttrain-auc:0.90102\n",
-      "[8]\teval-auc:0.78952\ttrain-auc:0.90086\n",
-      "[9]\teval-auc:0.78580\ttrain-auc:0.90148\n",
-      "[10]\teval-auc:0.79783\ttrain-auc:0.90679\n",
-      "[11]\teval-auc:0.78979\ttrain-auc:0.91249\n",
-      "[12]\teval-auc:0.79311\ttrain-auc:0.91354\n",
-      "[13]\teval-auc:0.79238\ttrain-auc:0.91602\n",
-      "[14]\teval-auc:0.79989\ttrain-auc:0.91728\n",
-      "[15]\teval-auc:0.80242\ttrain-auc:0.91713\n",
-      "[16]\teval-auc:0.79856\ttrain-auc:0.91708\n",
-      "[17]\teval-auc:0.80242\ttrain-auc:0.91776\n",
-      "[18]\teval-auc:0.79870\ttrain-auc:0.91835\n",
-      "[19]\teval-auc:0.79956\ttrain-auc:0.91871\n",
-      "[20]\teval-auc:0.79856\ttrain-auc:0.92261\n",
-      "[21]\teval-auc:0.79577\ttrain-auc:0.92388\n",
-      "[22]\teval-auc:0.79305\ttrain-auc:0.92642\n",
-      "[23]\teval-auc:0.79617\ttrain-auc:0.92840\n",
-      "[24]\teval-auc:0.79777\ttrain-auc:0.92834\n",
-      "[25]\teval-auc:0.79557\ttrain-auc:0.93223\n",
-      "[26]\teval-auc:0.78706\ttrain-auc:0.93503\n",
-      "[27]\teval-auc:0.79172\ttrain-auc:0.93526\n",
-      "[28]\teval-auc:0.79065\ttrain-auc:0.93603\n",
-      "[29]\teval-auc:0.79198\ttrain-auc:0.93693\n",
-      "[30]\teval-auc:0.78866\ttrain-auc:0.93739\n",
-      "[31]\teval-auc:0.79231\ttrain-auc:0.93854\n",
-      "[32]\teval-auc:0.79790\ttrain-auc:0.93889\n",
-      "[33]\teval-auc:0.79763\ttrain-auc:0.93931\n",
-      "[34]\teval-auc:0.78966\ttrain-auc:0.94053\n",
-      "[35]\teval-auc:0.79391\ttrain-auc:0.94127\n",
-      "[36]\teval-auc:0.78939\ttrain-auc:0.94156\n",
-      "[37]\teval-auc:0.79138\ttrain-auc:0.94216\n",
-      "[38]\teval-auc:0.78972\ttrain-auc:0.94251\n",
-      "[39]\teval-auc:0.79783\ttrain-auc:0.94334\n",
-      "[40]\teval-auc:0.79438\ttrain-auc:0.94468\n",
-      "[41]\teval-auc:0.78560\ttrain-auc:0.94671\n",
-      "[42]\teval-auc:0.78174\ttrain-auc:0.94756\n",
-      "[43]\teval-auc:0.78513\ttrain-auc:0.94883\n",
-      "[44]\teval-auc:0.79005\ttrain-auc:0.95036\n",
-      "[45]\teval-auc:0.78693\ttrain-auc:0.95036\n",
-      "[46]\teval-auc:0.78560\ttrain-auc:0.94981\n",
-      "[47]\teval-auc:0.78627\ttrain-auc:0.94993\n",
-      "[48]\teval-auc:0.78640\ttrain-auc:0.95029\n",
-      "[49]\teval-auc:0.78188\ttrain-auc:0.95115\n"
+      "[0]\teval-auc:0.77447\ttrain-auc:0.84592\n",
+      "[1]\teval-auc:0.84385\ttrain-auc:0.86727\n",
+      "[2]\teval-auc:0.84858\ttrain-auc:0.86926\n",
+      "[3]\teval-auc:0.83788\ttrain-auc:0.87747\n",
+      "[4]\teval-auc:0.84163\ttrain-auc:0.88201\n",
+      "[5]\teval-auc:0.84469\ttrain-auc:0.88526\n",
+      "[6]\teval-auc:0.84712\ttrain-auc:0.89012\n",
+      "[7]\teval-auc:0.85004\ttrain-auc:0.89479\n",
+      "[8]\teval-auc:0.84413\ttrain-auc:0.89788\n",
+      "[9]\teval-auc:0.85407\ttrain-auc:0.89704\n",
+      "[10]\teval-auc:0.84330\ttrain-auc:0.90139\n",
+      "[11]\teval-auc:0.84372\ttrain-auc:0.90389\n",
+      "[12]\teval-auc:0.83829\ttrain-auc:0.90538\n",
+      "[13]\teval-auc:0.83836\ttrain-auc:0.90733\n",
+      "[14]\teval-auc:0.83920\ttrain-auc:0.90846\n",
+      "[15]\teval-auc:0.83940\ttrain-auc:0.90854\n",
+      "[16]\teval-auc:0.83906\ttrain-auc:0.91114\n",
+      "[17]\teval-auc:0.83781\ttrain-auc:0.91316\n",
+      "[18]\teval-auc:0.83781\ttrain-auc:0.91435\n",
+      "[19]\teval-auc:0.83447\ttrain-auc:0.91731\n",
+      "[20]\teval-auc:0.83419\ttrain-auc:0.91831\n",
+      "[21]\teval-auc:0.83106\ttrain-auc:0.91909\n",
+      "[22]\teval-auc:0.83106\ttrain-auc:0.92063\n",
+      "[23]\teval-auc:0.82939\ttrain-auc:0.92111\n",
+      "[24]\teval-auc:0.82745\ttrain-auc:0.92304\n",
+      "[25]\teval-auc:0.82953\ttrain-auc:0.92457\n",
+      "[26]\teval-auc:0.82981\ttrain-auc:0.92483\n",
+      "[27]\teval-auc:0.83044\ttrain-auc:0.92522\n",
+      "[28]\teval-auc:0.82627\ttrain-auc:0.92716\n",
+      "[29]\teval-auc:0.82515\ttrain-auc:0.92753\n",
+      "[30]\teval-auc:0.82529\ttrain-auc:0.92896\n",
+      "[31]\teval-auc:0.82877\ttrain-auc:0.93008\n",
+      "[32]\teval-auc:0.83058\ttrain-auc:0.93014\n",
+      "[33]\teval-auc:0.83523\ttrain-auc:0.93065\n",
+      "[34]\teval-auc:0.83718\ttrain-auc:0.93262\n",
+      "[35]\teval-auc:0.83440\ttrain-auc:0.93531\n",
+      "[36]\teval-auc:0.83391\ttrain-auc:0.93586\n",
+      "[37]\teval-auc:0.83628\ttrain-auc:0.93675\n",
+      "[38]\teval-auc:0.84198\ttrain-auc:0.93775\n",
+      "[39]\teval-auc:0.84274\ttrain-auc:0.93821\n",
+      "[40]\teval-auc:0.84219\ttrain-auc:0.93806\n",
+      "[41]\teval-auc:0.84191\ttrain-auc:0.93872\n",
+      "[42]\teval-auc:0.84135\ttrain-auc:0.93901\n",
+      "[43]\teval-auc:0.84177\ttrain-auc:0.93929\n",
+      "[44]\teval-auc:0.84385\ttrain-auc:0.93943\n",
+      "[45]\teval-auc:0.84302\ttrain-auc:0.94056\n",
+      "[46]\teval-auc:0.84066\ttrain-auc:0.94128\n",
+      "[47]\teval-auc:0.84385\ttrain-auc:0.94163\n",
+      "[48]\teval-auc:0.84135\ttrain-auc:0.94221\n",
+      "[49]\teval-auc:0.84163\ttrain-auc:0.94220\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Caskroom/miniconda/base/envs/da/lib/python3.8/site-packages/xgboost/core.py:525: FutureWarning: Pass `evals` as keyword args.  Passing these as positional arguments will be considered as error in future releases.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -274,7 +282,7 @@
    "hash": "451282c7329e2a6a364ca3aa9d61cbc27edaeb5d17f404c45e9cca05e3b54b52"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('da')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -289,8 +297,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
