--- a/kaggle/american_express/amex_v1.ipynb
+++ b/kaggle/american_express/amex_v1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "20ba4b22",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "[2 rows x 190 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "beb28388",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "458913"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "943625a4",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "1  00000fd6641609c6ece5454664794f0340ad84dddce9a2...       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b122f70b",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "458913"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "5c6e7278",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "[2 rows x 190 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "571ad9fe",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "11363762"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "cc2b5d1c",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "924621"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ffc9fa58",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        "11363762"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "e316d2b2",
    "metadata": {},
    "outputs": [
@@ -528,40 +528,13 @@
        "(458913, 458913)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(train_labels_df.customer_ID.unique()), len(train_labels_df.customer_ID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7c48f8ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
-     ]
-    }
-   ],
-   "source": [
-    "train_test_df = pd.concat([train_df, test_df])  # memory 이슈로 합쳐서 진행하기엔 힘들어보임 -> 같은 전처리 과정을 함수화하여 처리하는 것이 나아보임"
    ]
   },
   {
@@ -583,21 +556,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "fb84d318",
+   "execution_count": 4,
+   "id": "0a981844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.S_2 = pd.to_datetime(train_df.S_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3925f1d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2017-03-09\n",
+       "1   2017-04-07\n",
+       "Name: S_2, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.S_2.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "28a80587",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "customer_ID    object\n",
-       "S_2            object\n",
        "D_63           object\n",
        "D_64           object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,15 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a981844",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8c94f06b",
    "metadata": {
     "execution": {
@@ -634,25 +631,80 @@
     },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "all_cols = [c for c in list(train_df.columns) if c not in ['customer_ID','S_2']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c9da1308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# description\n",
+    "cat_features = [\"B_30\",\"B_38\",\"D_114\",\"D_116\",\"D_117\",\"D_120\",\"D_126\",\"D_63\",\"D_64\",\"D_66\",\"D_68\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ceec2f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = [col for col in all_cols if col not in cat_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e7960694",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shape after engineering (458913, 918)\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
    "source": [
-    "all_cols = [c for c in list(train_df.columns) if c not in ['customer_ID','S_2']]\n",
-    "cat_features = [\"B_30\",\"B_38\",\"D_114\",\"D_116\",\"D_117\",\"D_120\",\"D_126\",\"D_63\",\"D_64\",\"D_66\",\"D_68\"]\n",
-    "num_features = [col for col in all_cols if col not in cat_features]\n",
-    "\n",
-    "test_num_agg = train_df.groupby(\"customer_ID\")[num_features].agg(['mean', 'std', 'min', 'max', 'last'])\n",
-    "test_num_agg.columns = ['_'.join(x) for x in test_num_agg.columns]\n",
+    "train_group_df = train_df.groupby(\"customer_ID\")[num_features].agg(['mean', 'std', 'min', 'max', 'last'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f1e4a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_group_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9757edc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_group_df.columns = ['_'.join(x) for x in train_group_df.columns]\n",
     "\n",
     "test_cat_agg = train_df.groupby(\"customer_ID\")[cat_features].agg(['count', 'last', 'nunique'])\n",
-    "test_cat_agg.columns = ['_'.join(x) for x in test_cat_agg.columns]\n"
+    "test_cat_agg.columns = ['_'.join(x) for x in test_cat_agg.columns]"
    ]
   },
   {
