--- a/DL/teamlab/torch_basics.ipynb
+++ b/DL/teamlab/torch_basics.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Bl4aBHhgN5jA"
@@ -1529,7 +1538,7 @@
    "source": [
     "a = torch.rand(10)\n",
     "b = torch.rand(10)\n",
-    "a.mm(b)"
+    "a.mm(b) # 주로 사용"
    ]
   },
   {
@@ -1582,7 +1591,7 @@
    },
    "outputs": [],
    "source": [
-    "t1.matmul(t2)"
+    "t1.matmul(t2) # 브로드 캐스팅이 일어나는 경우에 사용, 예측 못하는 연산이 일어날 수도 있음"
    ]
   },
   {
@@ -2194,7 +2203,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.12 ('da')",
    "language": "python",
    "name": "python3"
   },
@@ -2208,7 +2217,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.14"
+   "version": "3.8.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "451282c7329e2a6a364ca3aa9d61cbc27edaeb5d17f404c45e9cca05e3b54b52"
+   }
   }
  },
  "nbformat": 4,
