--- a/DL/teamlab/softmax_classifier_numpy.ipynb
+++ b/DL/teamlab/softmax_classifier_numpy.ipynb
@@ -635,6 +635,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.55868974, 1.04771594, 0.85247863],\n",
+       "       [1.34387367, 0.97373212, 0.67420717],\n",
+       "       [1.36749669, 0.99686138, 0.67627529],\n",
+       "       [1.3223453 , 0.98260931, 0.62683635],\n",
+       "       [1.57302183, 1.05971636, 0.85375037]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -719,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,8 +753,219 @@
     "                np.sum(\n",
     "                    (y * np.log(softmax(z))), axis=1).reshape((-1,1)) # 정답의 확률값만 남음\n",
     "                )\n",
-    "    return result "
+    "    return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimize_grdient(y, x, initial_weights, iterations = 500000, alpha=0.001):\n",
+    "    cost_history= []\n",
+    "    theta_history = []\n",
+    "    m = y.shape[0]\n",
+    "    theta = np.copy(initial_weights)\n",
+    "    \n",
+    "    number_of_classes = theta.shape[0]\n",
+    "    number_of_weights = theta.shape[1]\n",
+    "    \n",
+    "    for _ in range(iterations):\n",
+    "        original_theta = np.copy(theta)\n",
+    "        for k in range(number_of_classes):        \n",
+    "            for j in range(number_of_weights):\n",
+    "                partial_x = x[:, j]\n",
+    "                partial_entropy = y - softmax(x.dot(original_theta.T))\n",
+    "                theta[k][j]  = original_theta[k][j] + (\n",
+    "                    alpha* partial_entropy[:,k].dot(partial_x.T) ) /150\n",
+    "        if (_ % 10000) == 0:\n",
+    "            print(cross_entropy_function(y,x,theta)/150)\n",
+    "            cost_history.append(cross_entropy_function(y,x,theta))\n",
+    "    return theta, cost_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1143387366365514\n",
+      "0.7195539016618124\n",
+      "0.594911612569049\n",
+      "0.5264968512735455\n",
+      "0.4817825490752934\n",
+      "0.44927291790173446\n",
+      "0.42397728110171223\n",
+      "0.40337482270242847\n",
+      "0.38604362809509124\n",
+      "0.37111273936011996\n",
+      "0.3580139231243389\n",
+      "0.3463576430228303\n",
+      "0.3358660580643505\n",
+      "0.32633446172225195\n",
+      "0.31760790270769185\n",
+      "0.3095663815639048\n",
+      "0.30211512810378033\n",
+      "0.2951780136499671\n",
+      "0.288692965913653\n",
+      "0.28260870236614627\n",
+      "0.27688235478822176\n",
+      "0.27147771024585643\n",
+      "0.2663638872575555\n",
+      "0.2615143248593808\n",
+      "0.25690600035584327\n",
+      "0.2525188167026533\n",
+      "0.24833511742274192\n",
+      "0.24433929859261516\n",
+      "0.24051749555322896\n",
+      "0.2368573277475563\n",
+      "0.23334768921356622\n",
+      "0.22997857526149518\n",
+      "0.2267409380711421\n",
+      "0.22362656558583352\n",
+      "0.22062797931224765\n",
+      "0.21773834756979313\n",
+      "0.2149514114480258\n",
+      "0.2122614212819471\n",
+      "0.20966308188355573\n",
+      "0.2071515051035876\n",
+      "0.20472216856202055\n",
+      "0.2023708795959235\n",
+      "0.20009374364099705\n",
+      "0.19788713639793978\n",
+      "0.19574767924370587\n",
+      "0.1936722174361961\n",
+      "0.19165780073319552\n",
+      "0.18970166610568903\n",
+      "0.18780122227457885\n",
+      "0.18595403584034145\n"
+     ]
+    }
+   ],
+   "source": [
+    "theta, cost_history = minimize_grdient(y_data, x_data_minmax,weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.07463369, -1.74528207,  5.03058476, -5.10310622, -5.28355629],\n",
+       "       [ 3.07650376,  1.47425918, -1.42214303,  0.75122695, -1.31431806],\n",
+       "       [-5.24460653,  1.96328076, -1.81776801,  4.72877595,  7.35561887]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 16, 148,  87, 128,  78,  65,  86, 108, 119, 121,  18,  54, 140,\n",
+       "       110,   9, 106,  81,  80,  76, 109,  85, 132, 105,  88, 149,  86,\n",
+       "        23,  95, 144, 111])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_index= np.random.randint(0,150,30)\n",
+    "rand_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 1, 2, 1, 1, 1, 2, 1, 2, 0, 1, 2, 2, 0, 1, 1, 1, 1, 2, 1, 2,\n",
+       "       2, 1, 2, 1, 0, 1, 2, 2])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = np.argmax(softmax(x_data_minmax[rand_index].dot(theta.T)),axis=1) \n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 1, 2, 1, 1, 1, 2, 2, 2, 0, 1, 2, 2, 0, 2, 1, 1, 1, 2, 1, 2,\n",
+       "       2, 1, 2, 1, 0, 1, 2, 2])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_true = np.argmax(y_data[rand_index],axis=1)\n",
+    "y_true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9333333333333333"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(y_pred == y_true) / len(rand_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
